# computation

./: .gitignore  LICENSE  README.md  computation.opam  dune-project
examples/general_recursive/: erase.grf  min.grf  recur.grf  succ.grf  test.grf  test2.grf
examples/instruction_turing/: mul_two.trn  test.trn
examples/markov_algo/: bin_to_unary.mkv  reverse_str.mkv
examples/register_machine/: test.rgm
examples/table_turing/: busy_beaver2.ttn  busy_beaver3.ttn  busy_beaver4.ttn  busy_beaver5.ttn  test.ttn
lib/: dune
lib/general_recursive/: dune  functions.ml  lexer.mll  model.ml  parser.mly
lib/instruction_turing/: dune  instruction.ml  lexer.mll  model.ml  parser.mly
lib/markov_algo/: dune  lexer.mll  model.ml  parser.mly  production.ml
lib/register_machine/: dune  instruction.ml  lexer.mll  model.ml  parser.mly
lib/table_turing/: dune  lexer.mll  model.ml  parser.mly  table.ml
test/: dune  test_computation.ml
